# controlling_omni_robots

./: CMakeLists.txt  LICENSE  package.xml
scripts/: Clock.py  ControlLaws.py  circle_node.py  composit_node.py  gotogoal_node.py  line_node.py  sin_node.py
scripts/libs/: ControlLaws.py
